Start working on responsiveness: notice a breakpoint starting at 1012px and resolve overlapping of hero content with nav bar using a media query

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,7 +87,6 @@ nav a:hover {
 .hero-outer {
     width: 100vw;
     height: 100vh;
-    /* overflow: hidden; */
     margin-bottom: 4rem;
     background: url(../images/hero-image.jpg) no-repeat 40% 37%;
     background-size: 100%;    
@@ -105,8 +104,7 @@ nav a:hover {
     text-align: center;
 
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; 
+    flex-direction: column; 
     align-content: center;
     justify-content: flex-end;
 }
@@ -116,6 +114,7 @@ nav a:hover {
     background-color:rgba(44, 52, 60, .6); 
     border: 1px solid white;
     padding: 2rem;
+    align-self: center;
 }
 
 .hero-content span {
@@ -364,3 +363,39 @@ footer a{
     font-size: 2.5rem;
     color: rgb(197, 192, 185);
 }
+
+
+
+
+
+
+/* Large devices (laptops/desktops 1012 px and down) */
+@media only screen and (max-width: 1012px) {
+
+    main{
+        font-size: 1.3rem;
+    }
+
+    /* logo and nav on two different rows */
+    header{
+        height: 30vh;
+        flex-direction: column;
+        justify-content: center;
+        gap: 3rem;
+    }
+
+    .hero-outer{
+        height: auto;
+    }
+    
+    /* to contrast overlapping of hero content with header */
+    .hero-content-text{
+        margin-top: 40%;
+    }
+
+    .hero-content button{
+        min-width: 40%;
+    }
+}
+
+
